# models/chargers.go
@@ -1,7 +1,7 @@
 package models
 
 type Region struct {
-	Region string `json:"REGION"`
+	Region string `json:"Region"`
 }
 
 type Regions struct {
@@ -11,7 +11,7 @@ type Regions struct {
 }
 
 type Country struct {
-	Country string `json:"COUNTRY"`
+	Country string `json:"Country"`
 }
 
 type Countrys struct {
@@ -21,7 +21,7 @@ type Countrys struct {
 }
 
 type City struct {
-	City string `json:"CITY"`
+	City string `json:"City"`
 }
 
 type Citys struct {
@@ -31,7 +31,7 @@ type Citys struct {
 }
 
 type Location_type struct {
-	Location_type string `json:"LOCATION_TYPE"`
+	Location_type string `json:"Location_type"`
 }
 
 type Location_types struct {
@@ -41,45 +41,45 @@ type Location_types struct {
 }
 
 type Location struct {
-	Sl_translate             string `json:"SL_TRANSLATE"`
-	Address_line_1           string `json:"ADDRESS_LINE_1"`
-	Address_line_2           string `json:"ADDRESS_LINE_2"`
-	Address_notes            string `json:"ADDRESS_NOTES"`
-	Address                  string `json:"ADDRESS"`
-	Amenities                string `json:"AMENITIES"`
-	Baidu_lat                string `json:"BAIDU_LAT"`
-	Baidu_lng                string `json:"BAIDU_LNG"`
-	Chargers                 string `json:"CHARGERS"`
-	City                     string `json:"CITY"`
-	Common_name              string `json:"COMMON_NAME"`
-	Country                  string `json:"COUNTRY"`
-	Destination_charger_logo string `json:"DESTINATION_CHARGER_LOGO"`
-	Destination_website      string `json:"DESTINATION_WEBSITE"`
-	Directions_link          string `json:"DIRECTIONS_LINK"`
-	Emails                   string `json:"EMAILS"`
-	Geocode                  string `json:"GEOCODE"`
-	Hours                    string `json:"HOURS"`
-	Is_gallery               string `json:"IS_GALLERY"`
-	Kiosk_pin_x              string `json:"KIOSK_PIN_X"`
-	Kiosk_pin_y              string `json:"KIOSK_PIN_Y"`
-	Kiosk_zoom_pin_x         string `json:"KIOSK_ZOOM_PIN_X"`
-	Kiosk_zoom_pin_y         string `json:"KIOSK_ZOOM_PIN_Y"`
-	Latitude                 string `json:"LATITUDE"`
-	Location_id              string `json:"LOCATION_ID"`
-	Location_type            string `json:"LOCATION_TYPE"`
-	Longitude                string `json:"LONGITUDE"`
-	Nid                      string `json:"NID"`
-	Open_soon                string `json:"OPEN_SOON"`
-	Path                     string `json:"PATH"`
-	Postal_code              string `json:"POSTAL_CODE"`
-	Province_state           string `json:"PROVINCE_STATE"`
-	Region                   string `json:"REGION"`
-	Sales_phone              string `json:"SALES_PHONE"`
-	Sales_representative     string `json:"SALES_REPRESENTATIVE"`
-	Sub_region               string `json:"SUB_REGION"`
-	Title                    string `json:"TITLE"`
-	Trt_id                   string `json:"TRT_ID"`
-	Created_dttm             string `json:"CREATED_DTTM"`
+	Sl_translate             string `json:"Sl_translate"`
+	Address_line_1           string `json:"Address_line_1"`
+	Address_line_2           string `json:"Address_line_2"`
+	Address_notes            string `json:"Address_notes"`
+	Address                  string `json:"Address"`
+	Amenities                string `json:"Amenities"`
+	Baidu_lat                string `json:"Baidu_lat"`
+	Baidu_lng                string `json:"Baidu_lng"`
+	Chargers                 string `json:"Chargers"`
+	City                     string `json:"City"`
+	Common_name              string `json:"Common_name"`
+	Country                  string `json:"Country"`
+	Destination_charger_logo string `json:"Destination_charger_logo"`
+	Destination_website      string `json:"Destination_website"`
+	Directions_link          string `json:"Directions_link"`
+	Emails                   string `json:"Emails"`
+	Geocode                  string `json:"Geocode"`
+	Hours                    string `json:"Hours"`
+	Is_gallery               string `json:"Is_gallery"`
+	Kiosk_pin_x              string `json:"Kiosk_pin_x"`
+	Kiosk_pin_y              string `json:"Kiosk_pin_y"`
+	Kiosk_zoom_pin_x         string `json:"Kiosk_zoom_pin_x"`
+	Kiosk_zoom_pin_y         string `json:"Kiosk_zoom_pin_y"`
+	Latitude                 string `json:"Latitude"`
+	Location_id              string `json:"Location_id"`
+	Location_type            string `json:"Location_type"`
+	Longitude                string `json:"Longitude"`
+	Nid                      string `json:"Nid"`
+	Open_soon                string `json:"Open_soon"`
+	Path                     string `json:"Path"`
+	Postal_code              string `json:"Postal_code"`
+	Province_state           string `json:"Province_state"`
+	Region                   string `json:"Region"`
+	Sales_phone              string `json:"Sales_phone"`
+	Sales_representative     string `json:"Sales_representative"`
+	Sub_region               string `json:"Sub_region"`
+	Title                    string `json:"Title"`
+	Trt_id                   string `json:"Trt_id"`
+	Created_dttm             string `json:"Created_dttm"`
 }
 
 type Locations struct {
